# Optimierung

./: Makefile  README  bb.tex  lp.tex  nlp.tex  optimierung.tex  uebersicht.tex  variation.tex
aufgaben/: Makefile  antcolony.tex  aufgaben.aux  aufgaben.tex  blas.tex  branchandbound.tex  brechung.tex  descent.tex  fibonacci.tex  genalg.tex  gps.tex  karmarkar.tex  nlsimplex.tex  particles.tex  simann.tex  simplex.tex
code/: README
code/descent/: Grad_verf_opt.m  grad_verf.m
code/gps/GPS_code/GPS_Alg/: InputFile  InputFile_ideale_Daten  OutputFile  diffFunk.cpp  diffFunk.h  gps.cpp
code/gps/GPS_code/GPS_Alg_mit_Gewichtung/: InputFile  InputFile_Ideale_Daten  Makefile  OutputFile  diffFunk.cpp  diffFunk.h  gps.cpp
code/innerepunkte/: bsp2.m  bsp2octave.m
code/optimbase/: ChangeLog  Makefile.am  README  configure.ac  configureit  optim.c  optim.h  prob1.c  prob2.c  test.c
code/simplex/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  backend.c  backend.h  backendinfo.c  clutils.c  clutils.h  configure.ac  configureit  eliminate.cl  globals.c  globals.h  graphs.R  linprog.c  linprog.h  makemovie  povray.c  povray.h  random.c  random.h  simplex.c  simplex.h  simplexanimation.c  simplexblas.c  simplexblas.h  simplexcpu.c  simplexcpu.h  simplexlapack.c  simplexlapack.h  simplexocl.c  simplexocl.h  sphere.c  test1.c  test3.c  test4.c
cover/: .gitignore  Makefile
skript/: Makefile  dual.m  dual2.m  lp.tex  nlp.tex  optimierung.tex  uebersicht.tex  variation.tex  vorwort.tex
skript/add/: simpleximpl.tex
skript/descent/: OptimierungDerSchrittweite.tex  Schrittweite.tex  Zickzack.tex  bib.bib  descent.tex  introduction.tex
skript/downhill/: algorithm.tex  algorithmus1.pgf  algorithmus2.pgf  basics.tex  bib.bib  bib.tex  downhill.tex  examples.tex  introduction.tex  komp.tex  kon1.tex  kon2.tex  reflexion.tex  start.tex  streckung.tex  variations.tex
skript/genetic/: genetic.tex
skript/gps/: bib.bib  gps.tex
skript/images/: Makefile  innerepunkte.mp  lp.mp  nlp.mp
skript/innerepunkte/: Innere-Punkte-Verfahren.tex  bib.bib  header.tex  innerepunkte.tex
skript/licht/: beispiel.tex  fatamorgana.tex  licht.bib  licht.tex  theorie.tex
skript/partikelschwarm/: Makefile  Partikelschwarmalgorithmus.tex  Schwarmalgorithmus.tex  anwendungen.tex  code.tex  einfuehrung.tex  gbest.tex  geschwindigkeit.tex  hs-pso.tex  lbest-neumann.tex  lbest-ring.tex  lbest-wheel.tex  literature.bib  max-velocity.tex  new-velocity.tex  partikelschwarm.tex  stopbedingungen.tex  topologien.tex
skript/sa/: sa.tex
